完成地图弹出对话框

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapActivity"/>
-   <uses-library android:name="com.google.android.maps" /> 
+   <uses-library android:name="com.google.android.maps" android:required="true"/> 
     </application>
 </manifest>
